--- a/angular.json
+++ b/angular.json
@@ -88,7 +88,8 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+              "./node_modules/bootstrap/dist/css/bootstrap.min.css"
             ],
             "scripts": []
           }
@@ -119,6 +120,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "ng8fileupexample"
+    }
+  },
+  "defaultProject": "ng8fileupexample",
+  "cli": {
+    "analytics": false
+  }
 }
